# aegis_registry

./: .gitignore  pyproject.toml
authentication/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
core/: settings.py  unfold.py  urls.py
templates/: index.html  layout.html
templates/authentication/: login.html  profile.html  register.html
templates/partials/: package_card.html
